--- a/Navigering.css
+++ b/Navigering.css
@@ -129,6 +129,23 @@ body {
   min-height: 200px;
   max-width: 100% !important;
 }
+table{
+    border-collapse: collapse;
+    border-bottom: 2px solid grey;
+    width: 100%;
+    height: 100%;
+}
+th, td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
+th{
+    background-color: red;
+}
+tr{
+  background-color: azure;
+}
 @media screen and (max-width:970px) {
   .navbar a:not(:first-child) {display: none}
   .navbar a.icon {
