--- a/memes.css
+++ b/memes.css
@@ -1,7 +1,6 @@
 /* Slideshow container */
-.slideshow-container {
+.memes {
     max-width: 1000px;
     position: relative;
     margin: auto;
   }
-  
