--- a/Navigering.css
+++ b/Navigering.css
@@ -3,25 +3,13 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: cornflowerblue;
 }
+
+/* Navbar */
 .navbar{
     background-color: #333;
     overflow: hidden;
     position: sticky;
     top: 0;
-}
-.dropned {
-    float: left;
-    overflow: hidden;
-}
-.dropned .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
 }
 .innhold a {
     float: none;
@@ -49,6 +37,8 @@ body {
     background-color: cornflowerblue;
     color: black !important;
 }
+
+/* Infobar */
 .infobar {
     background-color: #333;
     color: white;
@@ -65,6 +55,8 @@ body {
     display: block;
     padding: 13px 13px
 }
+
+/* sosiale bildelenker */
 .github{
     background-color: black;
 }
@@ -83,6 +75,8 @@ body {
 .btc{
     background-color: rgb(57, 53, 255);
 }
+
+/* Generelt */
 .overskrift, .informasjon, .bevis, #informasjon1{
     font-family: 'Times New Roman', Times, serif;
     margin: 10px;
@@ -122,6 +116,8 @@ body {
 .overskrift a{
   color: black;
 }
+
+/* Tabellen*/
 table{
     border-collapse: collapse;
     border-bottom: 2px solid grey;
@@ -139,6 +135,15 @@ th{
 tr{
   background-color: azure;
 }
+
+/* Memes*/
+.memes {
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+}
+
+/* Responsivhet */
 @media screen and (max-width:620px) {
   .navbar a:not(:first-child) {display: none}
   .navbar a.icon {
